--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,6 +40,15 @@ header {
   color: black;
   background-color: transparent; }
 
+.btn-secondary {
+  color: #6c757d;
+  background-color: #f3c4fb;
+  width: 250px;
+  height: 35px;
+  border: none;
+  font-size: 20px;
+  box-shadow: none; }
+
 .efecto {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.095);
   transition: all 300ms;
@@ -550,7 +559,7 @@ header {
   header {
     font-size: 12px; }
   .header_menu {
-    font-size: 12px; }
+    font-size: 15px; }
   footer {
     font-size: 14px; }
   .illustracion {
@@ -565,7 +574,18 @@ header {
   header {
     font-size: 15px; }
   .header_menu {
+    visibility: hidden; }
+  .dropdown {
+    padding: 0;
+    margin: 0;
+    top: -60%; } }
+
+@media (min-width: 1570px) {
+  header {
     font-size: 15px; }
+  .header_menu {
+    font-size: 18px;
+    visibility: visible; }
   .footer-c, .copiNP, .copiQS, .copiCt {
     text-align: end; }
   .lugar, .lugarNP, .lugarQS, .lugarCt {
@@ -579,4 +599,6 @@ header {
   .imagenKeep {
     width: 50%; }
   .logoMercadoPago {
-    width: 10%; } }
+    width: 10%; }
+  .dropdown {
+    visibility: hidden; } }
