--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -23,6 +23,16 @@
     color: black;
     background-color: transparent;
 }
+.btn-secondary{
+    color: #6c757d;
+    background-color: #f3c4fb;
+    width: 250px;
+    height: 35px;
+    border: none;
+    font-size: 20px;
+    box-shadow: none;
+}
+
 .efecto{
     box-shadow: 0 0 0 0 rgba(0, 0, 0, .095);
     transition: all 300ms;
