--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,14 +40,24 @@ header {
   color: black;
   background-color: transparent; }
 
-.btn-secondary {
+.botonDeInicio, .opciones {
   color: #6c757d;
   background-color: #f3c4fb;
-  width: 250px;
-  height: 35px;
   border: none;
   font-size: 20px;
   box-shadow: none; }
+
+.botonDeInicio, .opciones {
+  background: transparent;
+  box-shadow: none;
+  border: none; }
+
+.opciones {
+  font-size: 15px;
+  text-decoration: none; }
+
+.opciones:hover {
+  color: #fffcf7; }
 
 .efecto {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.095);
@@ -292,10 +302,10 @@ header {
 .categorias-np {
   cursor: pointer; }
 
-.texto {
+.texto, .textoCyR {
   color: #6c757d; }
 
-.texto:hover {
+.texto:hover, .textoCyR:hover {
   color: #283845; }
 
 .header_menu {
@@ -498,10 +508,58 @@ header {
         position: absolute;
     }
 }*/
+@media (min-width: 350px) {
+  .header_menu {
+    font-size: 10px;
+    text-align: center;
+    visibility: hidden; }
+  header {
+    font-size: 10px; }
+  .logoTarjeta {
+    width: 48px; }
+  .logoMercadoPago {
+    width: 50%; }
+  .lugar, .lugarNP, .lugarQS, .lugarCt {
+    text-align: center; }
+  .footer-c, .copiNP, .copiQS, .copiCt {
+    text-align: center; }
+  .textoIndx {
+    font-size: 10px;
+    text-align: justify; }
+  .imagenes-index {
+    width: 15%; }
+  .imagenKeep {
+    width: 50%;
+    text-align: center; }
+  .textoUbicacion {
+    font-size: 12px; }
+  .illustracion {
+    width: 300px;
+    text-align: center; }
+  .logoMercadoPago {
+    width: 12%; }
+  .botonDePedido {
+    width: 110px;
+    font-size: 12px; }
+  .icon7 {
+    font-size: 25px; }
+  .form-select {
+    font-size: 15px; }
+  .logoLg {
+    width: 20%; }
+  .dropdown {
+    padding: 0;
+    margin: 0;
+    top: -80%;
+    text-align: center; }
+  .textoCyR {
+    visibility: hidden; } }
+
 @media (min-width: 500px) {
   .header_menu {
     font-size: 10px;
-    text-align: center; }
+    text-align: center;
+    visibility: hidden; }
   header {
     font-size: 10px; }
   .logoTarjeta {
@@ -534,13 +592,21 @@ header {
   .form-select {
     font-size: 15px; }
   .logoLg {
-    width: 20%; } }
+    width: 20%; }
+  .dropdown {
+    padding: 0;
+    margin: 0;
+    top: -80%;
+    text-align: center; }
+  .textoCyR {
+    visibility: hidden; } }
 
 @media (min-width: 768px) {
   header {
     font-size: 12px; }
   .header_menu {
-    font-size: 12px; }
+    font-size: 12px;
+    visibility: hidden; }
   footer {
     font-size: 14px; }
   .logoTarjeta {
@@ -553,13 +619,20 @@ header {
     width: 110px;
     font-size: 12px; }
   .icon7 {
-    font-size: 25px; } }
+    font-size: 25px; }
+  .dropdown {
+    padding: 0;
+    margin: 0;
+    top: -60%; }
+  .textoCyR {
+    visibility: visible; } }
 
 @media (min-width: 992px) {
   header {
     font-size: 12px; }
   .header_menu {
-    font-size: 15px; }
+    font-size: 15px;
+    visibility: hidden; }
   footer {
     font-size: 14px; }
   .illustracion {
@@ -568,7 +641,11 @@ header {
     width: 13%; }
   .botonDePedido {
     width: 120px;
-    font-size: 12px; } }
+    font-size: 12px; }
+  .dropdown {
+    padding: 0;
+    margin: 0;
+    top: -60%; } }
 
 @media (min-width: 1200px) {
   header {
@@ -584,7 +661,7 @@ header {
   header {
     font-size: 15px; }
   .header_menu {
-    font-size: 18px;
+    font-size: 15px;
     visibility: visible; }
   .footer-c, .copiNP, .copiQS, .copiCt {
     text-align: end; }
