--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -23,16 +23,26 @@
     color: black;
     background-color: transparent;
 }
-.btn-secondary{
+.botonDeInicio{
     color: #6c757d;
     background-color: #f3c4fb;
-    width: 250px;
-    height: 35px;
     border: none;
     font-size: 20px;
     box-shadow: none;
 }
-
+.botonDeInicio{
+    background: transparent;
+    box-shadow: none;
+    border: none;
+}
+.opciones{
+    @extend .botonDeInicio;
+    font-size: 15px;
+    text-decoration: none;
+}
+.opciones:hover{
+    color: $color_wpp_ig;
+}
 .efecto{
     box-shadow: 0 0 0 0 rgba(0, 0, 0, .095);
     transition: all 300ms;
