--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -262,7 +262,7 @@
         font-size: 15px;
         font-family: 'Barlow Condensed', sans-serif;
     }
-    .iconNP{
+    /*.iconNP{
         @extend .icon1;
         top: 194%;
     }
@@ -310,4 +310,4 @@
     }
     .categorias-np{
         cursor: pointer;
-    }
+    }*/
