--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,6 +56,13 @@ header {
   font-size: 15px;
   text-decoration: none; }
 
+.icon10 {
+  font-size: 18px;
+  color: #6c757d; }
+
+.icon10:hover {
+  background: none; }
+
 .opciones:hover {
   color: #fffcf7; }
 
@@ -384,18 +391,6 @@ header {
   color: #ffccd5;
   cursor: pointer; }
 
-.imagenes-index {
-  transition: all 300ms;
-  cursor: pointer; }
-
-.imagenes-index:hover {
-  transform: scale(1.05);
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
-  background-color: #ecbcfd; }
-
-.card {
-  background-color: #ecbcfd; }
-
 .textoCategorias {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
@@ -609,7 +604,9 @@ header {
     top: -80%;
     text-align: center; }
   .textoCyR {
-    visibility: hidden; } }
+    visibility: hidden; }
+  .icon10 {
+    justify-content: center; } }
 
 @media (min-width: 768px) {
   header {
