--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -82,121 +82,7 @@
 .textoCategorias:hover{
     color: $color_wpp_ig;
 }
-/*@media screen and (max-width: 576px){
-    .texto{
-        font-size: 10px;
-        right: 35%;
-        position: absolute;
-    }
-    .header_menu{
-        font-size: 10px;
-        justify-content: center;
-        display: flex;
-    }
-    .consultas{
-        font-size: 10px;
-        right: 10%;
-        top:3%;
-        position: absolute;
-    }
-    .imagenesrs{
-        height: 400px;
-        width: 500px;
-        right: 9%;
-    }
-    .imagenesrs2{
-        height: 400px;
-        width: 500px;
-        left: 10%;
-        position: absolute;
-    }
-    .lugar{
-        top: 6%;
-        font-size: 10px;
-    }
-    .footer-c{
-        top:6%;
-        font-size: 10px;
-    }
-    .footer-s{
-        top:5%;
-        right: 39%;
-        font-size: 10px;
-        position: absolute;
-    }
-    .icon1{
-        top: 0%;
-        font-size: 25px;
-    }
-    .icon2{
-        top: 0%;
-        font-size: 25px;
-        right: 35%;
-        position: absolute;
-    }
-    footer{
-        height: 100%;
-        position: absolute;
-    }
-}
-@media screen and (max-width: 768px){
-    .texto{
-        font-size: 13px;
-        right: 35%;
-        position: absolute;
-    }
-    .header_menu{
-        font-size: 13px;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-    }
-    .consultas{
-        font-size: 13px;
-        right: 10%;
-        top:3%;
-        position: absolute;
-    }
-    .imagenesrs{
-        height: 400px;
-        width: 500px;
-        right: 9%;
-    }
-    .imagenesrs2{
-        height: 400px;
-        width: 500px;
-        left: 10%;
-        position: absolute;
-    }
-    .lugar{
-        top: 6%;
-        font-size: 13px;
-    }
-    .footer-c{
-        top:6%;
-        font-size: 13px;
-    }
-    .footer-s{
-        top:5%;
-        right: 39%;
-        font-size: 13px;
-        position: absolute;
-    }
-    .icon1{
-        top: 0%;
-        font-size: 25px;
-    }
-    .icon2{
-        top: 0%;
-        font-size: 25px;
-        right: 35%;
-        position: absolute;
-    }
-    footer{
-        height: 100%;
-        position: absolute;
-    }
-}*/
+//Media Query 350//
 @media (min-width:350px){
     .header_menu{
         font-size: 10px;
@@ -264,7 +150,7 @@
         width: 50%;
     }
 }
-// Small devices (landscape phones, 576px and up)
+//Media Query 500//
 @media (min-width: 500px) {
     .header_menu{
         font-size: 10px;
@@ -335,9 +221,7 @@
         width: 30%;
     }
 }
-
-
-// Medium devices (tablets, 768px and up)
+//Media Query 768//
 @media (min-width: 768px) {
     header{
         font-size: 12px;
@@ -378,8 +262,7 @@
     }
 
 }
-
-// Large devices (desktops, 992px and up)
+//Media Query 992//
 @media (min-width: 992px) { 
     header{
         font-size: 12px;
@@ -410,7 +293,7 @@
         width: 20%;
     }
 }
-
+//Media Query 1200//
 @media (min-width: 1200px){
     header{
         font-size: 15px;
@@ -428,8 +311,7 @@
     }
 
 }
-
-// X-Large devices (large desktops, 1200px and up)
+//Media Query 1570//
 @media (min-width: 1570px) { 
         header{
             font-size: 15px;
