--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,18 +4,6 @@ body {
 header {
   color: #6c757d; }
 
-.pie {
-  background-color: #f3c4fb;
-  position: absolute;
-  bottom: 0;
-  width: 100%; }
-
-.pie2 {
-  background-color: #f3c4fb;
-  position: relative;
-  bottom: 0;
-  width: 100%; }
-
 * {
   margin: 0;
   padding: 0; }
@@ -25,20 +13,18 @@ header {
   font-size: 30px;
   right: 90%;
   top: 110%; }
-
-.icon1:hover {
-  color: black;
-  background-color: transparent; }
+  .icon1:hover {
+    color: black;
+    background-color: transparent; }
 
 .icon2 {
   color: #fffcf7;
   font-size: 30px;
   top: 90%;
   left: 47%; }
-
-.icon2:hover {
-  color: black;
-  background-color: transparent; }
+  .icon2:hover {
+    color: black;
+    background-color: transparent; }
 
 .botonDeInicio, .opciones {
   color: #6c757d;
@@ -59,9 +45,8 @@ header {
 .icon10 {
   font-size: 18px;
   color: #6c757d; }
-
-.icon10:hover {
-  background: none; }
+  .icon10:hover {
+    background: none; }
 
 .opciones:hover {
   color: #fffcf7; }
@@ -70,30 +55,9 @@ header {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.095);
   transition: all 300ms;
   background-color: transparent; }
-
-.efecto:hover {
-  transform: scale(1.05);
-  opacity: 75%; }
-
-.botonesBackHome {
-  width: 150px;
-  background-color: transparent;
-  border: none; }
-
-.botonesBackHome:hover {
-  color: #283845;
-  background-color: transparent; }
-
-.botonesBackHomeContacto {
-  width: 150px;
-  background-color: transparent;
-  border: none;
-  top: 85%;
-  position: absolute;
-  left: 45.5%; }
-
-.botonesBackHomeContacto:hover {
-  color: #6fffe9; }
+  .efecto:hover {
+    transform: scale(1.05);
+    opacity: 75%; }
 
 .illustracion {
   width: 500px;
@@ -140,9 +104,8 @@ header {
   color: #6c757d;
   top: 58%;
   font-family: 'Barlow Condensed', sans-serif; }
-
-.footer-s:hover {
-  color: #283845; }
+  .footer-s:hover {
+    color: #283845; }
 
 .footer-Seguinos {
   color: #6c757d;
@@ -153,20 +116,21 @@ header {
   font-size: 15px;
   font-family: 'Barlow Condensed', sans-serif; }
 
+.textoOpc {
+  cursor: pointer; }
+
 .texto, .textoCyR {
   color: #6c757d; }
-
-.texto:hover, .textoCyR:hover {
-  color: #283845; }
+  .texto:hover, .textoCyR:hover {
+    color: #283845; }
 
 .header_menu {
   color: #6c757d;
   text-transform: uppercase;
   font-size: 18px;
   font-family: 'Noto Sans', sans-serif; }
-
-.header_menu:hover {
-  color: white; }
+  .header_menu:hover {
+    color: white; }
 
 .fondo {
   background-color: #f3c4fb; }
@@ -195,27 +159,24 @@ header {
   border: none;
   width: 150px;
   transition: 0 5ms ease; }
-
-.botonDePedido:hover {
-  color: #283845;
-  background-color: transparent; }
+  .botonDePedido:hover {
+    color: #283845;
+    background-color: transparent; }
 
 .botonDeSi {
   background-color: #283845;
   color: #6c757d; }
-
-.botonDeSi:hover {
-  color: #6fffe9;
-  background-color: #283845; }
+  .botonDeSi:hover {
+    color: #6fffe9;
+    background-color: #283845; }
 
 .botonDeNo {
   background-color: #283845;
   color: #6c757d;
   border: none; }
-
-.botonDeNo:hover {
-  color: #6fffe9;
-  background-color: #283845; }
+  .botonDeNo:hover {
+    color: #6fffe9;
+    background-color: #283845; }
 
 .botonEnviar {
   background-color: transparent; }
@@ -228,9 +189,8 @@ header {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   color: #fffcf7; }
-
-.textoCategorias:hover {
-  color: #fffcf7; }
+  .textoCategorias:hover {
+    color: #fffcf7; }
 
 @media (min-width: 350px) {
   .header_menu {
