--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -7,21 +7,19 @@
     font-size: 30px;
     right: 90%;
     top: 110%;
-    
+    &:hover{
+        color: black;
+        background-color: transparent;}
 }
-.icon1:hover{
-    color: black;
-    background-color: transparent;
-}
+
 .icon2{
     color: $color_wpp_ig;
     font-size: 30px;
     top: 90%;
     left:47%;
-}
-.icon2:hover{
-    color: black;
-    background-color: transparent;
+    &:hover{
+        color: black;
+        background-color: transparent;}
 }
 .botonDeInicio{
     color: #6c757d;
@@ -43,9 +41,8 @@
 .icon10{
     font-size: 18px;
     color: $color_texto;
-}
-.icon10:hover{
-    background: none;
+    &:hover{
+        background: none;}
 }
 .opciones:hover{
     color: $color_wpp_ig;
@@ -54,30 +51,9 @@
     box-shadow: 0 0 0 0 rgba(0, 0, 0, .095);
     transition: all 300ms;
     background-color: transparent;
-}
-.efecto:hover{
-    transform: scale(1.05);
-    opacity: 75%;
-}
-.botonesBackHome{
-    width: 150px;
-    background-color: transparent;
-    border: none;
-}
-.botonesBackHome:hover{
-    color: $color_botones;
-    background-color: transparent;
-}
-.botonesBackHomeContacto{
-    width: 150px;
-    background-color: transparent;
-    border: none;
-    top: 85%;
-    position: absolute;
-    left: 45.5%;
-}
-.botonesBackHomeContacto:hover{
-    color: $color_letra_botones;
+    &:hover{
+        transform: scale(1.05);
+        opacity: 75%;}
 }
 .illustracion{
     width: 500px;
@@ -130,9 +106,8 @@
     color: $color_texto;
     top: 58%;
     font-family: 'Barlow Condensed', sans-serif;
-}
-.footer-s:hover{
-    color: $color_botones;
+    &:hover{
+        color: $color_botones;}
 }
 .footer-Seguinos{
     color: $color_texto;
@@ -142,4 +117,7 @@
     color: $color_texto;
     font-size: 15px;
     font-family: 'Barlow Condensed', sans-serif;
+}
+.textoOpc{
+    cursor: pointer;
 }
